[gd_scene load_steps=9 format=3 uid="uid://cys55hkbt2xbd"]

[ext_resource type="Material" uid="uid://n437lsr7w31f" path="res://tile/materials/tile.tres" id="1_58fmb"]
[ext_resource type="Script" path="res://tile/tile.gd" id="2_hh2o7"]
[ext_resource type="Material" uid="uid://cktqb8xgbsw53" path="res://tile/materials/hover_tile.tres" id="3_b22hl"]
[ext_resource type="Material" uid="uid://cj0bs40tto217" path="res://tile/materials/walk_tile.tres" id="4_h4u47"]
[ext_resource type="Material" uid="uid://s7hxboosx8bs" path="res://tile/materials/debug_tile.tres" id="5_3ei4b"]
[ext_resource type="Material" uid="uid://ck7tm68tjl5tb" path="res://tile/materials/hover_walk_tile.tres" id="5_i4yaf"]
[ext_resource type="Script" path="res://tile/tile_area3d.gd" id="5_o0p71"]

[sub_resource type="BoxShape3D" id="BoxShape3D_oybon"]
size = Vector3(1, 0.5, 1)

[node name="Tile" type="CSGBox3D" groups=["tiles"]]
size = Vector3(1, 0.5, 1)
material = ExtResource("1_58fmb")
script = ExtResource("2_hh2o7")
tile_material = ExtResource("1_58fmb")
hover_tile_material = ExtResource("3_b22hl")
walk_tile_material = ExtResource("4_h4u47")
hover_walk_tile_material = ExtResource("5_i4yaf")
debug_tile_material = ExtResource("5_3ei4b")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 0
monitoring = false
script = ExtResource("5_o0p71")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_oybon")

[node name="UnitDetector" type="RayCast3D" parent="."]
unique_name_in_owner = true
visible = false
target_position = Vector3(0, 1, 0)

[node name="RayCasts" type="Node3D" parent="."]
unique_name_in_owner = true
visible = false

[node name="TopRayCast3D" type="RayCast3D" parent="RayCasts"]
target_position = Vector3(0, 0, -1)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="DownRayCast3D" type="RayCast3D" parent="RayCasts"]
target_position = Vector3(0, 0, 1)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="LeftRayCast3D" type="RayCast3D" parent="RayCasts"]
target_position = Vector3(-1, 0, 0)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="RightRayCast3D" type="RayCast3D" parent="RayCasts"]
target_position = Vector3(1, 0, 0)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[connection signal="input_event" from="Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
